--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
 	"name": "ra-light",
 	"displayName": "Ra Light",
 	"description": "Here is the best theme for your eye care!",
-	"version": "1.1.1",
+	"version": "2.0.0",
 	"engines": {
-		"vscode": "^1.30.0"
+		"vscode": "^1.38.0"
 	},
 	"categories": [
 		"Themes"
@@ -34,6 +34,8 @@
 		"ra-light",
 		"ra light theme",
 		"theme",
+		"light",
+		"light theme",
 		"ra"
 	]
 }
